@@ -20,6 +20,7 @@ libwzd_core_la_HEADERS = \
 	wzd_ClientThread.h \
 	wzd_commands.h   \
 	wzd_configfile.h \
+	wzd_configloader.h \
 	wzd_crc32.h  	 \
 	wzd_crontab.h	 \
 	wzd_data.h       \
@@ -64,6 +65,7 @@ libwzd_core_la_SOURCES = \
 	wzd_ClientThread.c \
 	wzd_commands.c   \
 	wzd_configfile.c \
+	wzd_configloader.c \
 	wzd_crc32.c      \
 	wzd_crontab.c    \
 	wzd_data.c       \
