@@ -3,6 +3,8 @@
 - use 'rats','splint', 'pscan' for security audit
 
 '********'
+- backends: write a 'debug' backend to trace/audit all backend calls
+'********'
 - use mysql_config
 '********'
 - add config file parser
