@@ -1,3 +1,8 @@
+2005-10-10  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* feature: basic support of new config format, a few changes were
+	needed in backend and tls sections
+
 2005-09-26  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* SECURITY: fix insecure use of popen() in wzd_mod.c
